--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,6 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastmcp>=2.13.1",
+    "aiosqlite>=0.20.0",
+    "python-dateutil>=2.8.2",
 ]
